syntax="proto3";

package navigate;

message TestReq {
    int32   service_id          = 1;
}

message TestRsp {
    bytes   service_name        = 1;
}

message GetAccessReq {
    int32   service_id          = 1;
    uint64  user_id             = 2;
}

message GetAccessRsp {
    bytes   access_key          = 1;
    int32   service_id          = 2;
    uint32  proc_id             = 3;
    bytes   out_ip              = 4;
    int32   out_port            = 5;
}

message PutLoadReq {
    int32   service_id          = 1;
    uint32  proc_id             = 2;
    int32   load_val            = 3;
}

message PutLoadRsp {

}

message NavigateMsg {                           // 奇数是请求，偶数是响应
    oneof choice {
        TestReq         test_req        = 1;    // 请求
        TestRsp         test_rsp        = 2;    // 响应

        GetAccessReq    get_access_req  = 3;    // 获取接入点
        GetAccessRsp    get_access_rsp  = 4;  

        PutLoadReq      put_load_req    = 5;    // 上传负载
        PutLoadRsp      put_load_rsp    = 6;

    }
}